<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_dl</name>
  <version>0.1.0</version>
  <description>The rosneuro package for building nn-based decoders</description>

  <maintainer email="tommaso.cortecchia@studenti.unipd.it">Tommaso Cortecchia</maintainer>

  <author email="tommaso.cortecchia@studenti.unipd.it">Tommaso Cortecchia</author>
  
  <license>GPLv3</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>rosneuro_filters</depend>
  <depend>rosneuro_filters_butterworth</depend>
  <depend>librtfilter</depend>
  
</package>
